feat: convert yoe columns to int

--- a/notebooks/2-preprocessing.ipynb
+++ b/notebooks/2-preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "4          8 yrs  100K   10K   NaN           $110,000    Hsin-chu, TP, Taiwan  "
       ]
      },
-     "execution_count": 308,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "11            location                        Location"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "Name: company_size, dtype: int64"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "4  100000.0  10000.0      NaN"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "Name: total_compensation, dtype: float64"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# deal with `yoe_total` and `yoe_at_company` columns\n",
+    "# format 1: `n yrs` -> n\n",
+    "# format 2: `n+ yrs` -> n\n",
+    "# format 3: `m-n yrs` -> drop\n",
+    "\n",
+    "def convert_yoe(yoe):\n",
+    "\t# format 2\n",
+    "\tif '+' in yoe:\n",
+    "\t\treturn int(yoe.split('+')[0])\n",
+    "\t# format 3\n",
+    "\telif '-' in yoe:\n",
+    "\t\treturn None\n",
+    "\t# format 1\n",
+    "\telif ' ' in yoe:\n",
+    "\t\treturn int(yoe.split(' ')[0])\n",
+    "\telse:\n",
+    "\t\treturn int(yoe)\n",
+    "\t\n",
+    "raw_df['yoe_total'] = raw_df['yoe_total'].apply(convert_yoe)\n",
+    "raw_df['yoe_at_company'] = raw_df['yoe_at_company'].apply(convert_yoe)\n",
+    "\n",
+    "# drop the rows with `yoe_total` or `yoe_at_company` being None\n",
+    "raw_df.dropna(subset=['yoe_total', 'yoe_at_company'], inplace=True)\n",
+    "shape = raw_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -544,8 +576,8 @@
        "job_title              object\n",
        "level                  object\n",
        "domain                 object\n",
-       "yoe_total              object\n",
-       "yoe_at_company         object\n",
+       "yoe_total             float64\n",
+       "yoe_at_company        float64\n",
        "base                  float64\n",
        "stock                 float64\n",
        "bonus                 float64\n",
@@ -554,7 +586,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -594,14 +626,14 @@
        "yoe_total               0\n",
        "yoe_at_company          0\n",
        "base                    0\n",
-       "stock                 619\n",
-       "bonus                 940\n",
+       "stock                 611\n",
+       "bonus                 926\n",
        "total_compensation      0\n",
        "location                0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +674,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,16 +689,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2038, 12)"
+       "(2009, 12)"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +720,7 @@
        "0"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +742,7 @@
        "0"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +767,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +791,7 @@
        "0"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +832,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,22 +845,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2038, 12)"
+       "(2009, 12)"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "raw_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "company               object\n",
+       "company_size           int64\n",
+       "job_title             object\n",
+       "level                 object\n",
+       "domain                object\n",
+       "yoe_total              int64\n",
+       "yoe_at_company         int64\n",
+       "base                   int64\n",
+       "stock                  int64\n",
+       "bonus                  int64\n",
+       "total_compensation     int64\n",
+       "location              object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert all the `float64` columns to `int64`\n",
+    "raw_df['base'] = raw_df['base'].astype(int)\n",
+    "raw_df['stock'] = raw_df['stock'].astype(int)\n",
+    "raw_df['bonus'] = raw_df['bonus'].astype(int)\n",
+    "raw_df['total_compensation'] = raw_df['total_compensation'].astype(int)\n",
+    "raw_df['yoe_total'] = raw_df['yoe_total'].astype(int)\n",
+    "raw_df['yoe_at_company'] = raw_df['yoe_at_company'].astype(int)\n",
+    "\n",
+    "raw_df.dtypes"
    ]
   },
   {
@@ -840,15 +912,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows with wrong total_compensation: 294\n",
-      "Ratio: 14.43%\n"
+      "Number of rows with wrong total_compensation: 291\n",
+      "Ratio: 14.48%\n"
      ]
     },
     {
@@ -894,12 +966,12 @@
        "      <td>Software Engineer</td>\n",
        "      <td>I1</td>\n",
        "      <td>ML / AI</td>\n",
-       "      <td>2 yrs</td>\n",
-       "      <td>0 yrs</td>\n",
-       "      <td>123100.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>123097.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>123100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>123097</td>\n",
        "      <td>New York, NY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -909,12 +981,12 @@
        "      <td>Software Engineer</td>\n",
        "      <td>I2</td>\n",
        "      <td>Web Development (Front-End)</td>\n",
-       "      <td>4 yrs</td>\n",
-       "      <td>2 yrs</td>\n",
-       "      <td>51500.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4800.0</td>\n",
-       "      <td>56250.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>51500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4800</td>\n",
+       "      <td>56250</td>\n",
        "      <td>Cork, CK, Ireland</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -924,12 +996,12 @@
        "      <td>Software Engineer</td>\n",
        "      <td>60</td>\n",
        "      <td>Full Stack</td>\n",
-       "      <td>2 yrs</td>\n",
-       "      <td>2 yrs</td>\n",
-       "      <td>24000.0</td>\n",
-       "      <td>7200.0</td>\n",
-       "      <td>2400.0</td>\n",
-       "      <td>33576.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>24000</td>\n",
+       "      <td>7200</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>33576</td>\n",
        "      <td>Noida, UP, India</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -939,12 +1011,12 @@
        "      <td>Software Engineer</td>\n",
        "      <td>60</td>\n",
        "      <td>API Development (Back-End)</td>\n",
-       "      <td>4 yrs</td>\n",
-       "      <td>2 yrs</td>\n",
-       "      <td>25200.0</td>\n",
-       "      <td>4000.0</td>\n",
-       "      <td>3600.0</td>\n",
-       "      <td>32786.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>25200</td>\n",
+       "      <td>4000</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>32786</td>\n",
        "      <td>Hyderabad, TS, India</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -954,12 +1026,12 @@
        "      <td>Software Engineer</td>\n",
        "      <td>Principal SDE</td>\n",
        "      <td>Full Stack</td>\n",
-       "      <td>13 yrs</td>\n",
-       "      <td>11 yrs</td>\n",
-       "      <td>73400.0</td>\n",
-       "      <td>38300.0</td>\n",
-       "      <td>11700.0</td>\n",
-       "      <td>123364.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>11</td>\n",
+       "      <td>73400</td>\n",
+       "      <td>38300</td>\n",
+       "      <td>11700</td>\n",
+       "      <td>123364</td>\n",
        "      <td>Bengaluru, KA, India</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -974,22 +1046,22 @@
        "10  Microsoft        182268  Software Engineer             60   \n",
        "11  Microsoft        182268  Software Engineer  Principal SDE   \n",
        "\n",
-       "                         domain yoe_total yoe_at_company      base    stock  \\\n",
-       "5                       ML / AI     2 yrs          0 yrs  123100.0      0.0   \n",
-       "8   Web Development (Front-End)     4 yrs          2 yrs   51500.0      0.0   \n",
-       "9                    Full Stack     2 yrs          2 yrs   24000.0   7200.0   \n",
-       "10   API Development (Back-End)     4 yrs          2 yrs   25200.0   4000.0   \n",
-       "11                   Full Stack    13 yrs         11 yrs   73400.0  38300.0   \n",
+       "                         domain  yoe_total  yoe_at_company    base  stock  \\\n",
+       "5                       ML / AI          2               0  123100      0   \n",
+       "8   Web Development (Front-End)          4               2   51500      0   \n",
+       "9                    Full Stack          2               2   24000   7200   \n",
+       "10   API Development (Back-End)          4               2   25200   4000   \n",
+       "11                   Full Stack         13              11   73400  38300   \n",
        "\n",
-       "      bonus  total_compensation              location  \n",
-       "5       0.0            123097.0          New York, NY  \n",
-       "8    4800.0             56250.0     Cork, CK, Ireland  \n",
-       "9    2400.0             33576.0      Noida, UP, India  \n",
-       "10   3600.0             32786.0  Hyderabad, TS, India  \n",
-       "11  11700.0            123364.0  Bengaluru, KA, India  "
+       "    bonus  total_compensation              location  \n",
+       "5       0              123097          New York, NY  \n",
+       "8    4800               56250     Cork, CK, Ireland  \n",
+       "9    2400               33576      Noida, UP, India  \n",
+       "10   3600               32786  Hyderabad, TS, India  \n",
+       "11  11700              123364  Bengaluru, KA, India  "
       ]
      },
-     "execution_count": 326,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,16 +1076,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1744, 12)"
+       "(1718, 12)"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
