additional details of crawler and preprocessing

--- a/notebooks/1-crawler.ipynb
+++ b/notebooks/1-crawler.ipynb
@@ -249,6 +249,13 @@
     "\n",
     "desired_companies_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observation"
+   ]
   }
  ],
  "metadata": {
