--- a/notebooks/2-preprocessing.ipynb
+++ b/notebooks/2-preprocessing.ipynb
@@ -202,6 +202,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " **Give the definition of the col meaning**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 112,
    "metadata": {},
@@ -1110,6 +1117,137 @@
    "outputs": [],
    "source": [
     "raw_df.to_csv('./data/cleaned_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For columns with numeric data type, how is the distribution of the data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For columns with numeric data types, you will calculate:\n",
+    "- Percentage (from 0 to 100) of missing values\n",
+    "- The min\n",
+    "- The lower quartile (phân vị 25)\n",
+    "- The median (phân vị 50)\n",
+    "- The upper quartile (phân vị 75)\n",
+    "- The max\n",
+    "\n",
+    "You will save the results to a DataFrame `num_col_info_df`, where:\n",
+    "- The names of the columns are the names of the numeric columns in `raw_df`\n",
+    "- Names of rows: \"missing_ratio\", \"min\", \"lower_quartile\", \"median\", \"upper_quartile\", \"max\"  \n",
+    "\n",
+    "For ease of viewing, you round all values to 1 decimal place using the `.round(1)` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "num_col_info_df = raw_df.select_dtypes(exclude='object')\n",
+    "\n",
+    "def missing_ratio(s):\n",
+    "    return (s.isna().mean() * 100).round(1)\n",
+    "    # raise NotImplementedError()\n",
+    "\n",
+    "def median(df):\n",
+    "    return (df.quantile(0.5)).round(1)\n",
+    "    # raise NotImplementedError()\n",
+    "\n",
+    "def lower_quartile(df):\n",
+    "    return (df.quantile(0.25)).round(1)\n",
+    "    # raise NotImplementedError()\n",
+    "\n",
+    "def upper_quartile(df):\n",
+    "    return (df.quantile(0.75)).round(1)\n",
+    "    # raise NotImplementedError()\n",
+    "\n",
+    "num_col_info_df = num_col_info_df.agg([missing_ratio, \"min\", lower_quartile, median, upper_quartile, \"max\"])\n",
+    "num_col_info_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TEST\n",
+    "assert num_col_info_df[\"Total Population\"][\"missing_ratio\"] == 0\n",
+    "dict(num_col_info_df.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For each column with a non-numeric data type, how are the values distributed?(1đ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For columns with non-numeric data types, you calculate:\n",
+    "- Percentage (from 0 to 100) of missing values\n",
+    "- Number of values (the values here are different values and we do not consider missing values): with columns whose type is categorical, it is a set with a finite number of categories. Directly counting the number of values in these columns doesn't make much sense, so it's better to count the number of elements of all types. (Số lượng các giá trị (các giá trị ở đây là các giá trị khác nhau và ta không xét giá trị thiếu): với cột mà có kiểu là categorical, nó là một tập hợp có số lượng hữu hạn các loại. Việc đếm trực tiếp số lượng các giá trị trong những cột này không có nhiều ý nghĩa, nên tốt hơn hết là mà sẽ đếm số lượng phần tử các loại.)\n",
+    "- The percentage (from 0 to 100) of each value is sorted by decreasing percentage (we do not consider missing values, the ratio is the ratio compared to the number of non-missing values): you use a dictionary to store , key is the value, value is the percentage; With the column corresponding to each type, the method is similar to above.\n",
+    "\n",
+    "You will save the results to DataFrame `cat_col_info_df`, where:\n",
+    "- The names of the columns are the names of the non-numeric columns in `raw_df`\n",
+    "- The names of the lines are: \"missing_ratio\", \"num_values\", \"value_ratios\"\n",
+    "\n",
+    "For ease of viewing, you round all values to 1 decimal place using the `.round(1)` method.\n",
+    "\n",
+    "Hint: you might want to use it [`explode` method](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.explode.html)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_colwidth', 100) # For clearly\n",
+    "pd.set_option('display.max_columns', None) # For clearly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "cat_col_info_df = raw_df.select_dtypes(include='object')\n",
+    "\n",
+    "def missing_ratio(s):\n",
+    "    # raise NotImplementedError()\n",
+    "    return (s.isna().mean() * 100).round(1)\n",
+    "\n",
+    "def num_values(s):\n",
+    "    # raise NotImplementedError()\n",
+    "    s = s.str.split(';')\n",
+    "    s = s.explode()\n",
+    "    return len(s.value_counts())\n",
+    "\n",
+    "def value_ratios(s):\n",
+    "    # raise NotImplementedError()\n",
+    "    s = s.str.split(';')\n",
+    "    s = s.explode()\n",
+    "    totalCount = (~s.isna()).sum()\n",
+    "    return ((s.value_counts()/totalCount*100).round(1)).to_dict()\n",
+    "\n",
+    "cat_col_info_df = cat_col_info_df.agg([missing_ratio, num_values, value_ratios])\n",
+    "cat_col_info_df"
    ]
   }
  ],
