refactor: cleanup data and fetch some more

--- a/notebooks/1-crawler.ipynb
+++ b/notebooks/1-crawler.ipynb
@@ -227,7 +227,9 @@
     "- Stripe\n",
     "- Facebook\n",
     "- Amazon\n",
-    "- Snap"
+    "- Snap\n",
+    "- Axon\n",
+    "- AMD"
    ]
   },
   {
