feat: fetch DXC and Ubisoft

--- a/notebooks/1-crawler.ipynb
+++ b/notebooks/1-crawler.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,9 @@
     "- Amazon\n",
     "- Snap\n",
     "- Axon\n",
-    "- AMD"
+    "- AMD\n",
+    "- DXC Technology\n",
+    "- Ubisoft"
    ]
   },
   {
@@ -238,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make sure to check if the url exists: https://www.levels.fyi/company/{company-name}\n",
+    "# make sure to check if the url exists: https://www.levels.fyi/companies/{company-name}\n",
     "desired_companies = ['company-name']\n",
     "\n",
     "desired_companies_df = pd.DataFrame()\n",
@@ -250,13 +252,6 @@
     "desired_companies_df.to_csv('./data/desired_companies.csv', index=False)\n",
     "\n",
     "desired_companies_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Observation"
    ]
   }
  ],
