--- a/notebooks/5 - Data-modeling.ipynb
+++ b/notebooks/5 - Data-modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "4       San Francisco, CA  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -371,11 +371,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[numerical_features] = np.where(outliers.to_numpy()[:, None], df[numerical_features].mean().to_numpy(), df[numerical_features])"
+    "if outliers.any():\n",
+    "    df.drop(df.index[outliers], inplace=True)\n",
+    "    mean_values = df[numerical_features].mean().to_numpy()\n",
+    "    df.loc[outliers, numerical_features] = mean_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1278 entries, 0 to 1383\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   company             1278 non-null   object \n",
+      " 1   company_size        1278 non-null   float64\n",
+      " 2   job_title           1278 non-null   object \n",
+      " 3   level               1278 non-null   object \n",
+      " 4   domain              1278 non-null   object \n",
+      " 5   yoe_total           1278 non-null   float64\n",
+      " 6   yoe_at_company      1278 non-null   float64\n",
+      " 7   base                1278 non-null   float64\n",
+      " 8   stock               1278 non-null   float64\n",
+      " 9   bonus               1278 non-null   float64\n",
+      " 10  total_compensation  1278 non-null   float64\n",
+      " 11  location            1278 non-null   object \n",
+      "dtypes: float64(7), object(5)\n",
+      "memory usage: 129.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
@@ -383,6 +421,47 @@
    "metadata": {},
    "source": [
     "3. Consistency Check:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns with negative values:\n",
+      "Index([], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check for negative values in columns where they are not allowed\n",
+    "negative_values_columns = ['company_size', 'yoe_total', 'yoe_at_company', 'base', 'stock', 'bonus', 'total_compensation']\n",
+    "negative_values = df[negative_values_columns].lt(0).any()\n",
+    "print(\"Columns with negative values:\")\n",
+    "print(negative_values[negative_values].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if negative_values.any():\n",
+    "    df[negative_values_columns] = df[negative_values_columns].clip(lower=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mình có thể thêm các điều kiện khác để kiểm tra. Ví dụ như tổng 3 mục base stock và bonus lại nhỏ hơn total_compensation"
    ]
   }
  ],
