--- a/notebooks/3-exploration.ipynb
+++ b/notebooks/3-exploration.ipynb
@@ -1295,6 +1295,7 @@
    "metadata": {},
    "source": [
     "> **Answer:** \n",
+    "> - The top 10 job titles with the highest average total compensation are: Software Engineer Manager, Product Design Manager, Product Manager, Data Science Manager, Technical Program Manager, Applied Scientist, Business Development, Security Engineer, Hardware Engineer, Software Engineer\n",
     "> - The highest average total compensation job title is Software Engineer Manager with nearly 500,000 average total compensation, and it has a big gap compared to the 2nd highest average total compensation job title is Product Design Manager with above 400,000 average total compensation\n",
     "> - The lowest average total compensation job title is Software Engineer with above 200,000 average total compensation, and it has a nearly no gap compared to the 2nd lowest average total compensation job title is Hardware Engineer with also above 200,000 average total compensation\n",
     "> - Overall, these job title has a big total compensation and has close gap compared to each other"
@@ -1468,8 +1469,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> "
+    "> **Answer:**\n",
+    "> - Top 10 technology companies are: Amazon, Google, Oracle, Microsoft, Apple, Intel, Facebook, DXC Technology, Grab, Shopee\n",
+    "> - The highest bonus is 47,333 of Apple (the 5th company in the top 10) which is so much higher than the 2nd highest bonus is 28,285 of Facebook (the 7th company in the top 10). This proves that the big size company does not mean the high bonus and nice culture\n",
+    "> - The lowest bonus is 0 of DXC Technology (the 8th company in the top 10) which is a close gap to the 2nd lowest bonus is 7,382 of Oracle (the 3rd company in the top 10) and also close to Amazon with 7,587 (the 1st company in the top 10). This proves that the big size company does not mean the high bonus and nice culture\n",
+    "> - Overall, the bonus of the top 10 companies is not really high compared to total compensation and has quite large gap compared to each other"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 5:** What is the job title of top 10 average bonus?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
